--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "symfony/framework-bundle": "5.4.*",
     "symfony/google-mailer": "5.4.*",
     "symfony/mailer": "5.4.*",
+    "symfony/monolog-bundle": "^3.0",
     "symfony/notifier": "5.4.*",
     "symfony/rate-limiter": "5.4.*",
     "symfony/security-bundle": "5.4.*",
@@ -33,8 +34,10 @@
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.4",
+    "symfony/debug-bundle": "5.4.*",
     "symfony/maker-bundle": "^1.14",
     "symfony/stopwatch": "5.4.*",
+    "symfony/var-dumper": "5.4.*",
     "symfony/web-profiler-bundle": "5.4.*"
   },
   "config": {
